--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea
-src/
 pkg/
-database/simons-portfolio-2add992d213c.json
-token/bytes.txt
+bin/
+src/server/token/bytes.txt
+src/client/node_modules/
+src/server/database/simons-portfolio-2add992d213c.json
