golang can now serve typescript frontend

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ pkg/
 bin/
 src/server/token/bytes.txt
 src/client/node_modules/
+src/client/build/
+src/client/public/
 src/server/database/simons-portfolio-2add992d213c.json
 .main.go.swp
