--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "build",
-    "rootDir": "src",
+    "outDir": "./build/",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -10,13 +9,16 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "typeRoots": ["./node_modules/@types"]
+    "noImplicitAny": true,
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true
   },
-  "include": ["src"]
+  "include": ["./src/**/*"]
 }
