--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ src/server/token/bytes.txt
 src/client/node_modules/
 src/client/build/
 src/client/public/
+src/better-client/node_modules
 src/server/database/simons-portfolio-2add992d213c.json
 .main.go.swp
