--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,41 +1,34 @@
 {
-  "name": "better-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
-  "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.34",
-    "@emotion/styled": "^10.0.27",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "css-loader": "^4.2.1",
-    "emotion-theming": "^10.0.27",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-router-dom": "^5.2.0",
-    "style-loader": "^1.2.1",
-    "typescript": "^3.9.7"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "scripts": {
-    "watch": "webpack-dev-server --progress --hide-modules",
-    "build": "webpack"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "better-client",
+    "version": "1.0.0",
+    "description": "client for my portfolio",
+    "repository": {
+        "url": "github.com/scrummer123/golang-portfolio"
+    },
+    "main": "webpack.config.js",
+    "dependencies": {
+        "@chakra-ui/core": "^1.0.0-rc.2",
+        "@chakra-ui/theme": "^1.0.0-rc.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^16.9.46",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.5",
+        "html-webpack-plugin": "^4.3.0",
+        "ts-loader": "^8.0.2",
+        "typescript": "^3.9.7",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "scripts": {
+        "watch": "webpack-dev-server",
+        "build": "webpack"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
