--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 src/server/token/bytes.txt
 src/client-bu
 src/client/node_modules
+src/client/package-lock.json
 src/client/src/build
 src/server/database/simons-portfolio-2add992d213c.json
 .main.go.swp
