--- a/src/next-client/package.json
+++ b/src/next-client/package.json
@@ -22,6 +22,7 @@
         "@emotion/core": "^10.0.35",
         "@emotion/styled": "^10.0.27",
         "emotion-theming": "^10.0.27",
+        "formik": "^2.1.5",
         "next": "^9.5.2",
         "next-cookies": "^2.0.3",
         "react": "^16.13.1",
